added every button through js Implemented all functionality except calculate setup the main design with grid and flexbox

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin calculator</title>
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
     <link rel="stylesheet" href="static/main.css">
 </head>
 <body>
-    <div id="container">
-      <div id="output">output field</div>
-      <div id="nums">number buttons</div>
-      <div id="operations">Operaton buttons</div>
-      <div id="execute">Execute</div>
+    <div id ="container">
+      <div id="output"></div>
+      <div id="nums"></div>
+      <div id="operations"></div>
+      <div id="execute"></div>
     </div>    
 </body>
 </html>
