--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin calculator</title>
-    <script src="main.js" defer></script>
-    <link rel="stylesheet" href="static/main.css">
+    <script src="./main.js" defer></script>
+    <link rel="stylesheet" href="./static/main.css">
 </head>
 <body>
     <div id ="container">
